# serializer version: 1
# name: TestCreateAPIKey.test[False-False]
  dict({
    'administrator': False,
    'created_at': '2015-10-06T20:00:00Z',
    'groups': list([
    ]),
    'id': 'foobar_0',
    'key': 'raw_key',
    'name': 'Foobar',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
  })
# ---
# name: TestCreateAPIKey.test[False-True]
  dict({
    'administrator': False,
    'created_at': '2015-10-06T20:00:00Z',
    'groups': list([
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'musicians',
      }),
    ]),
    'id': 'foobar_0',
    'key': 'raw_key',
    'name': 'Foobar',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
  })
# ---
# name: TestCreateAPIKey.test[True-False]
  dict({
    'administrator': False,
    'created_at': '2015-10-06T20:00:00Z',
    'groups': list([
    ]),
    'id': 'foobar_0',
    'key': 'raw_key',
    'name': 'Foobar',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
  })
# ---
# name: TestCreateAPIKey.test[True-True]
  dict({
    'administrator': False,
    'created_at': '2015-10-06T20:00:00Z',
    'groups': list([
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'musicians',
      }),
    ]),
    'id': 'foobar_0',
    'key': 'raw_key',
    'name': 'Foobar',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
  })
# ---
# name: TestCreateAPIKey.test_naming
  dict({
    'administrator': False,
    'created_at': '2015-10-06T20:00:00Z',
    'groups': list([
    ]),
    'id': 'foobar_1',
    'key': 'raw_key',
    'name': 'Foobar',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
  })
# ---
# name: TestCreateAPIKey.test_naming.1
  dict({
    '_id': 'hashed_key',
    'administrator': False,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'groups': list([
    ]),
    'id': 'foobar_1',
    'name': 'Foobar',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestUpdateAPIKey.test[False-False]
  dict({
    'administrator': True,
    'created_at': '2015-10-06T20:00:00Z',
    'groups': list([
    ]),
    'id': 'foobar_0',
    'name': 'Foobar',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
  })
# ---
# name: TestUpdateAPIKey.test[False-False].1
  dict({
    '_id': 'foobar',
    'administrator': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'groups': list([
    ]),
    'id': 'foobar_0',
    'name': 'Foobar',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestUpdateAPIKey.test[False-True]
  dict({
    'administrator': True,
    'created_at': '2015-10-06T20:00:00Z',
    'groups': list([
    ]),
    'id': 'foobar_0',
    'name': 'Foobar',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': True,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
  })
# ---
# name: TestUpdateAPIKey.test[False-True].1
  dict({
    '_id': 'foobar',
    'administrator': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'groups': list([
    ]),
    'id': 'foobar_0',
    'name': 'Foobar',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': True,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestUpdateAPIKey.test[True-False]
  dict({
    'administrator': True,
    'created_at': '2015-10-06T20:00:00Z',
    'groups': list([
    ]),
    'id': 'foobar_0',
    'name': 'Foobar',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': True,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
  })
# ---
# name: TestUpdateAPIKey.test[True-False].1
  dict({
    '_id': 'foobar',
    'administrator': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'groups': list([
    ]),
    'id': 'foobar_0',
    'name': 'Foobar',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': True,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestUpdateAPIKey.test[True-True]
  dict({
    'administrator': True,
    'created_at': '2015-10-06T20:00:00Z',
    'groups': list([
    ]),
    'id': 'foobar_0',
    'name': 'Foobar',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': True,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
  })
# ---
# name: TestUpdateAPIKey.test[True-True].1
  dict({
    '_id': 'foobar',
    'administrator': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'groups': list([
    ]),
    'id': 'foobar_0',
    'name': 'Foobar',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': True,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestUpdateAPIKey.test[missing-False]
  dict({
    'administrator': True,
    'created_at': '2015-10-06T20:00:00Z',
    'groups': list([
    ]),
    'id': 'foobar_0',
    'name': 'Foobar',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
  })
# ---
# name: TestUpdateAPIKey.test[missing-False].1
  dict({
    '_id': 'foobar',
    'administrator': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'groups': list([
    ]),
    'id': 'foobar_0',
    'name': 'Foobar',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestUpdateAPIKey.test[missing-True]
  dict({
    'administrator': True,
    'created_at': '2015-10-06T20:00:00Z',
    'groups': list([
    ]),
    'id': 'foobar_0',
    'name': 'Foobar',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
  })
# ---
# name: TestUpdateAPIKey.test[missing-True].1
  dict({
    '_id': 'foobar',
    'administrator': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'groups': list([
    ]),
    'id': 'foobar_0',
    'name': 'Foobar',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'user': dict({
      'id': 'bf1b993c',
    }),
  })
# ---
# name: TestUpdateAPIKey.test_not_found
  dict({
    'id': 'not_found',
    'message': 'Not found',
  })
# ---
# name: test_edit[all_valid][response]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'email': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'bob',
    'id': 'bf1b993c',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
    'settings': dict({
      'quick_analyze_workflow': 'nuvs',
      'show_ids': False,
      'show_versions': False,
      'skip_quick_analyze_dialog': False,
    }),
  })
# ---
# name: test_edit[good_email][response]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'email': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'bob',
    'id': 'bf1b993c',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
    'settings': dict({
      'quick_analyze_workflow': 'nuvs',
      'show_ids': False,
      'show_versions': False,
      'skip_quick_analyze_dialog': False,
    }),
  })
# ---
# name: test_edit[invalid_credentials][response]
  dict({
    'id': 'bad_request',
    'message': 'Invalid credentials',
  })
# ---
# name: test_edit[invalid_email][response]
  list([
    dict({
      'in': 'body',
      'loc': list([
        'email',
      ]),
      'msg': 'The format of the email is invalid',
      'type': 'value_error',
    }),
  ])
# ---
# name: test_edit[missing_all][response]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'email': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'bob',
    'id': 'bf1b993c',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
    'settings': dict({
      'quick_analyze_workflow': 'nuvs',
      'show_ids': False,
      'show_versions': False,
      'skip_quick_analyze_dialog': False,
    }),
  })
# ---
# name: test_edit[missing_email][response]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'email': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'bob',
    'id': 'bf1b993c',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
    'settings': dict({
      'quick_analyze_workflow': 'nuvs',
      'show_ids': False,
      'show_versions': False,
      'skip_quick_analyze_dialog': False,
    }),
  })
# ---
# name: test_edit[missing_old_password][response]
  list([
    dict({
      'in': 'body',
      'loc': list([
        '__root__',
      ]),
      'msg': 'The old password needs to be given in order for the password to be changed',
      'type': 'value_error',
    }),
  ])
# ---
# name: test_edit[missing_password][response]
  list([
    dict({
      'in': 'body',
      'loc': list([
        '__root__',
      ]),
      'msg': 'The new password needs to be given in order for the password to be changed',
      'type': 'value_error',
    }),
  ])
# ---
# name: test_edit[none_all][response]
  list([
    dict({
      'in': 'body',
      'loc': list([
        'email',
      ]),
      'msg': 'Value may not be null',
      'type': 'value_error',
    }),
    dict({
      'in': 'body',
      'loc': list([
        'old_password',
      ]),
      'msg': 'Value may not be null',
      'type': 'value_error',
    }),
    dict({
      'in': 'body',
      'loc': list([
        'password',
      ]),
      'msg': 'Value may not be null',
      'type': 'value_error',
    }),
  ])
# ---
# name: test_edit[short_password][response]
  dict({
    'id': 'bad_request',
    'message': 'Password does not meet minimum length requirement (8)',
  })
# ---
# name: test_get
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'email': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'bob',
    'id': 'bf1b993c',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
    'settings': dict({
      'quick_analyze_workflow': 'nuvs',
      'show_ids': False,
      'show_versions': False,
      'skip_quick_analyze_dialog': False,
    }),
  })
# ---
# name: test_get_api_keys
  list([
    dict({
      'administrator': True,
      'created_at': '2015-10-06T20:00:00Z',
      'groups': list([
        dict({
          'id': 1,
          'legacy_id': None,
          'name': 'musicians',
        }),
      ]),
      'id': 'abc123',
      'name': 'Foobar',
      'permissions': dict({
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      }),
    }),
    dict({
      'administrator': False,
      'created_at': '2015-10-06T20:00:00Z',
      'groups': list([
      ]),
      'id': 'xyz321',
      'name': 'Baz',
      'permissions': dict({
        'cancel_job': False,
        'create_ref': False,
        'create_sample': False,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      }),
    }),
  ])
# ---
# name: test_login[all_valid]
  dict({
    'reset': False,
  })
# ---
# name: test_login[missing_remember]
  dict({
    'reset': False,
  })
# ---
# name: test_login[remember_is_none]
  list([
    dict({
      'in': 'body',
      'loc': list([
        'remember',
      ]),
      'msg': 'Value may not be null',
      'type': 'value_error',
    }),
  ])
# ---
# name: test_login[wrong_handle]
  dict({
    'id': 'bad_request',
    'message': 'Invalid username or password',
  })
# ---
# name: test_login[wrong_password]
  dict({
    'id': 'bad_request',
    'message': 'Invalid username or password',
  })
# ---
# name: test_remove_api_key[404]
  dict({
    'id': 'not_found',
    'message': 'Not found',
  })
# ---
# name: test_update_settings[invalid_input][response]
  list([
    dict({
      'in': 'body',
      'loc': list([
        'show_ids',
      ]),
      'msg': 'value could not be parsed to a boolean',
      'type': 'type_error.bool',
    }),
  ])
# ---
# name: test_update_settings[null_values][response]
  list([
    dict({
      'in': 'body',
      'loc': list([
        'show_ids',
      ]),
      'msg': 'Value may not be null',
      'type': 'value_error',
    }),
    dict({
      'in': 'body',
      'loc': list([
        'skip_quick_analyze_dialog',
      ]),
      'msg': 'Value may not be null',
      'type': 'value_error',
    }),
    dict({
      'in': 'body',
      'loc': list([
        'quick_analyze_workflow',
      ]),
      'msg': 'Value may not be null',
      'type': 'value_error',
    }),
    dict({
      'in': 'body',
      'loc': list([
        'show_versions',
      ]),
      'msg': 'Value may not be null',
      'type': 'value_error',
    }),
  ])
# ---
# name: test_update_settings[valid_input][response]
  dict({
    'quick_analyze_workflow': 'pathoscope_bowtie',
    'show_ids': False,
    'show_versions': True,
    'skip_quick_analyze_dialog': True,
  })
# ---
